--- a/src/1-Intro/1-5_autonomous-kinematics-measurements/1-5_autonomous-kinematics-measurements.tex
+++ b/src/1-Intro/1-5_autonomous-kinematics-measurements/1-5_autonomous-kinematics-measurements.tex
@@ -1,5 +1,15 @@
-\subsection{Overcoming Implant Detection}
+The proposed method overcomes the various limitations of previous attempts to autonomously measure kinematics from single plane fluoroscopy. The key feature of all these limitations is that they prevent the adoption of this technique in a clinical setting, due to the labor overhead or equipment required in order to generate an accurate kinematic report. The proposed combination of methods will alleviate these requirements, and the extensibility of the software will allow this technology to be used in a clinical setting without disrupting the standard clinical workflow.
 
-\subsection{Overcoming Initial Pose Estimation}
+\subsection{Autonomous Implant Detection}
+\label{sec:implant-detection}
+\input{src/1-Intro/1-5_autonomous-kinematics-measurements/implant-detection.tex}
+
+\subsection{Initial Pose Estimation}
+\label{sec:pose-estimation}
+\input{src/1-Intro/1-5_autonomous-kinematics-measurements/pose-estimation.tex}
+
+\subsection{Pose Refinement}
+\label{sec:pose-refinement}
 
 \subsection{Overcoming Single-Plane Limitations}
+\label{sec:single-plane-limitations}
