--- a/src/1-Intro/ch1-lit_review.tex
+++ b/src/1-Intro/ch1-lit_review.tex
@@ -14,20 +14,31 @@ Machine learning algorithms automate the process of analytical model building, u
 \input{src/1-Intro/1-1_background/kinematics-from-fluoro.tex}
 
 \section{Computer Vision Primer}
+\label{sec:cv-primer}
 \subsection{Geometric Transformations}
+\label{sec:geometric-transformations}
 \input{src/1-Intro/1-2_computer-vision-primer/geometric-transformations.tex}
+
 \subsection{Image Formation and Camera Properties}
+\label{sec:img-form-camera-props}
 \input{src/1-Intro/1-2_computer-vision-primer/image-formation-and-cameras.tex}
+
 \subsection{Image Processing}
+\label{sec:image-processing}
 \input{src/1-Intro/1-2_computer-vision-primer/image-processing.tex}
+
 \subsection{Image Similarity Metrics}
+\label{sec:image-similarity}
 \input{src/1-Intro/1-2_computer-vision-primer/image-similarity-metrics.tex}
 
 \section{Deep Learning for Image Processing in Orthopaedics}
+\label{sec:deep-learning}
 \input{src/1-Intro/1-3_machine-learning/1-3_ml}
 
 \section{Model-Image Registration for Measuring Kinematics from Fluoroscopic Images}
+\label{sec:model-image-registration}
 \input{src/1-Intro/1-4_model-image-registration/1-4_model-image-registration.tex}
 
 \section{Automating Measurements of Kinematics from Fluoroscopic Images}
+\label{sec:autonomous-kinematics}
 \input{src/1-Intro/1-5_autonomous-kinematics-measurements/1-5_autonomous-kinematics-measurements.tex}
