--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -762,6 +762,20 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\4GA3IHJH\\Chris Harris_Mike Stephens_1988_A COMBINED CORNER AND EDGE DETECTOR.pdf}
 }
 
+@article{cochranWhatFastFourier1967,
+  title = {What Is the Fast {{Fourier}} Transform?},
+  author = {Cochran, W.T. and Cooley, J.W. and Favin, D.L. and Helms, H.D. and Kaenel, R.A. and Lang, W.W. and Maling, G.C. and Nelson, D.E. and Rader, C.M. and Welch, P.D.},
+  year = {1967},
+  journal = {Proceedings of the IEEE},
+  volume = {55},
+  number = {10},
+  pages = {1664--1674},
+  issn = {0018-9219},
+  doi = {10.1109/PROC.1967.5957},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\MBA8IR86\\Cochran et al. - 1967 - What is the fast Fourier transform.pdf}
+}
+
 @inproceedings{cohenEMNISTExtendingMNIST2017,
   title = {{{EMNIST}}: {{Extending MNIST}} to Handwritten Letters},
   shorttitle = {{{EMNIST}}},
