Getting through Lipschitz.

--- a/src/1-Intro/1-5_autonomous-kinematics-measurements/1-5_autonomous-kinematics-measurements.tex
+++ b/src/1-Intro/1-5_autonomous-kinematics-measurements/1-5_autonomous-kinematics-measurements.tex
@@ -8,9 +8,14 @@ The proposed method overcomes the various limitations of previous attempts to au
 \label{sec:pose-estimation}
 \input{src/1-Intro/1-5_autonomous-kinematics-measurements/pose-estimation.tex}
 
-\subsection{Pose Refinement}
-\label{sec:pose-refinement}
-\input{src/1-Intro/1-5_autonomous-kinematics-measurements/pose-refinement.tex}
+\subsection{Objective Function}
+\label{sec:objective-function}
+\input{src/1-Intro/1-5_autonomous-kinematics-measurements/objective-function.tex}
+
+\subsection{Optimization Routine}
+\label{sec:optimization-routine}
+\input{src/1-Intro/1-5_autonomous-kinematics-measurements/optimization-routine.tex}
+
 
 \subsection{Overcoming Single-Plane Limitations}
 \label{sec:single-plane-limitations}
