Lipschitz done. Extra figures added.

--- a/src/1-Intro/1-5_autonomous-kinematics-measurements/1-5_autonomous-kinematics-measurements.tex
+++ b/src/1-Intro/1-5_autonomous-kinematics-measurements/1-5_autonomous-kinematics-measurements.tex
@@ -19,3 +19,4 @@ The proposed method overcomes the various limitations of previous attempts to au
 
 \subsection{Overcoming Single-Plane Limitations}
 \label{sec:single-plane-limitations}
+\input{src/1-Intro/1-5_autonomous-kinematics-measurements/single-plane-limitations.tex}
