--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -1,3 +1,19 @@
+@inproceedings{abdellahGPUAccelerationDigitally2015,
+  title = {{{GPU}} Acceleration for Digitally Reconstructed Radiographs Using Bindless Texture Objects and {{CUDA}}/{{OpenGL}} Interoperability},
+  booktitle = {2015 37th {{Annual International Conference}} of the {{IEEE Engineering}} in {{Medicine}} and {{Biology Society}} ({{EMBC}})},
+  author = {Abdellah, Marwan and Eldeib, Ayman and Owis, Mohamed I.},
+  year = {2015},
+  month = aug,
+  pages = {4242--4245},
+  publisher = {{IEEE}},
+  address = {{Milan}},
+  doi = {10.1109/EMBC.2015.7319331},
+  abstract = {This paper features an advanced implementation of the X-ray rendering algorithm that harnesses the giant computing power of the current commodity graphics processors to accelerate the generation of high resolution digitally reconstructed radiographs (DRRs). The presented pipeline exploits the latest features of NVIDIA Graphics Processing Unit (GPU) architectures, mainly bindless texture objects and dynamic parallelism. The rendering throughput is substantially improved by exploiting the interoperability mechanisms between CUDA and OpenGL. The benchmarks of our optimized rendering pipeline reflect its capability of generating DRRs with resolutions of 20482 and 40962 at interactive and semi interactive frame-rates using an NVIDIA GeForce 970 GTX device.},
+  isbn = {978-1-4244-9271-8},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\Z6R63B3E\\Abdellah et al. - 2015 - GPU acceleration for digitally reconstructed radio.pdf}
+}
+
 @article{abebeEffectsFemoralGraft2011,
   ids = {abebeEffectsFemoralGraft2011a},
   title = {The Effects of Femoral Graft Placement on in Vivo Knee Kinematics after Anterior Cruciate Ligament Reconstruction},
