--- a/Jensen-Lit-Review.tex
+++ b/Jensen-Lit-Review.tex
@@ -10,9 +10,11 @@
 \usepackage{pgfplots}%   pgfplots is tikz but better.
 %\usepackage{amsrefs}%   amsrefs contains the .bibtex style content for mathematician papers.
 \usepackage[framemethod=TikZ]{mdframed} %For MD Theorem
-\usepackage{cleveref}
+\usepackage[capitalise]{cleveref}
 \usepackage{mathtools}
 
+\creflabelformat{equation}{#2 \textup{#1}#3}
+\crefdefaultlabelformat{#2 \textup{#1}#3}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%                     User Configuration commands
