--- a/src/1-Intro/1-5_autonomous-kinematics-measurements/optimization-routine.tex
+++ b/src/1-Intro/1-5_autonomous-kinematics-measurements/optimization-routine.tex
@@ -33,9 +33,11 @@ We can illustrate this convergence with a simple example: consider the function 
 
 \begin{figure}
     \begin{center}
-        \includegraphics[width = 0.75\linewidth]{figures/raster/shubert-step1.png}
-        \includegraphics[width = 0.75\linewidth]{figures/raster/shubert-step2.png}
-        \includegraphics[width = 0.75\linewidth]{figures/raster/shubert-step3.png}
+        \includegraphics[width = 0.85\linewidth]{figures/raster/shubert-step1.png}
+        \vspace{3mm}
+        \includegraphics[width = 0.85\linewidth]{figures/raster/shubert-step2.png}
+        \vspace{3mm}
+        \includegraphics[width = 0.85\linewidth]{figures/raster/shubert-step3.png}
     \end{center}
     \label{fig:shubert}
     \caption{A visual representation of Shubert's algorthm, which finds the global minima iteratively through a repeated calculation of the intersection of two lines with slope $\pm K$. If $K$ is known, it will always find the global minimum.}
@@ -45,7 +47,8 @@ While powerful, a-priori knowledge of the Lipschitz constant is needed for deter
 
 Fortunately, methods exist for utilizing the power of Lipschitzian optimization without the need for explicit knowledge of the Lipschitz constant \cite{jonesLipschitzianOptimizationLipschitz1993}. These can both overcome the need for an a-priori knowledge of the Lipschitz constant, as well as offer some solutions of the slow convergence by providing methods for exploiting both local and global search simultaneously to find the minimum function values.
 
-Jones et al. \cite{jonesLipschitzianOptimizationLipschitz1993} propose a method by which the center, $c$, of a domain is sampled, rather than the endpoints. This produces the equations below (\cref{eq:direct-lipschitz}). The inequalities represent slopes $+K$ and $-K$, respectively, and provide a maximum value for the lower bound of the function at the endpoints, $a$ and $b$. The midpoints of $[a,c]$, and $[c,b]$ are then calculated and the process is then repeated. The power of this method is that you can determine potentially optimal regions of the domain by choosing those points along the lower convex hull of the graph plotting sub-domain size vs center point function value. The points along this hull are those that could potentially include the function minimum, and each is chosen for further sub-sampling. This elegantly mixes local vs. global search, and drastically increases the speed of convergence.
+Jones et al. \cite{jonesLipschitzianOptimizationLipschitz1993} propose a method by which the center, $c$, of a domain is sampled, rather than the endpoints. This produces the equations below (\cref{eq:direct-lipschitz}). The inequalities represent slopes $+K$ and $-K$, respectively, and provide a maximum value for the lower bound of the function at the endpoints, $a$ and $b$. The midpoints of $[a,c]$, and $[c,b]$ are then calculated and the process is then repeated (\cref{fig:direct-1D}). The power of this method is that you can determine potentially optimal regions of the domain by choosing those points along the lower convex hull of the graph plotting sub-domain size vs center point function value. The points along this hull are those that could potentially include the function minimum, and each is chosen for further sub-sampling (\cref{fig:direct-convex-hull}). Determining the convex hull is a problem well studied in the literature (CREATE CITATION AND FIND SOME SOURCES). This elegantly mixes local vs. global search, and drastically increases the speed of convergence.
+
 
 \begin{equation}
     f(x) \ge \begin{dcases}
@@ -55,8 +58,23 @@ Jones et al. \cite{jonesLipschitzianOptimizationLipschitz1993} propose a method 
     \label{eq:direct-lipschitz}
 \end{equation}
 
-\begin{center}
-    \Huge{CONVEX HULL w/ potentially optimial regions labeled - Jones et al}
-\end{center}
+\begin{figure}[h!]
+    \begin{center}
+        \includegraphics[width=0.85\linewidth]{figures/raster/direct-1D.png}
+    \end{center}
+    \caption{The DIviding RECTangles (DIRECT) algorithm in one dimension. It can find the global minimum of a funciton without a-priori knowledge of the Lipschitz constant.}
+    \label{fig:direct-1D}
+\end{figure}
+
+\begin{figure}[h!]
+    \begin{center}
+        \includegraphics[width=0.65\linewidth]{figures/raster/direct-convex-hull.png}
+    \end{center}
+    \caption{The potentially optimal regions of the DIRECT algorithm are those points that lay along the lower convex hull of the scatter plot of sub-domain size vs function value at center. This is due to those regions being the locations where the maximum possible rate of change in the function might be a minimum, without any prior knowledge of the Lipschitz constant.}
+    \label{fig:direct-convex-hull}
+\end{figure}
 
 This can be extended into multiple dimensions without loss of generality. First, each dimension in the domain is normalized to the range $[0,1]$, and a hypercube is created in $\mathbb{R}^D$, where $D$ is the dimension of the domain you are searching. The first iteration trisects this hybercube along an arbitrary dimension, and further iterations trisect along the largest dimension of the hypercube. We select potentially optimal hypercubes by identifying points along the lower convex hull of the graph plotting hypercube size vs center point function value.
+
+
+For our purposes, we construct a hypercube along each of the 6 degrees-of-freedom that describe the pose of the implant in space, using bounds set by the user. The first epoch involves minimizing the objective function with larger bounds and a larger dilation. After all iterations have been used up, the algorithm is re-started with a smaller dilation and tighter bounds. The last epoch typically has the tightest bounds and no dilation. This pyramidal scheme offers a smooth objective function when the bounds are largest, which assists in escaping local minima, and an aggressive objective when the bounds are tight, and fewer local minima are present.
