--- a/src/1-Intro/1-5_autonomous-kinematics-measurements/optimization-routine.tex
+++ b/src/1-Intro/1-5_autonomous-kinematics-measurements/optimization-routine.tex
@@ -62,7 +62,7 @@ Jones et al. \cite{jonesLipschitzianOptimizationLipschitz1993} propose a method 
     \begin{center}
         \includegraphics[width=0.85\linewidth]{figures/raster/direct-1D.png}
     \end{center}
-    \caption{The DIviding RECTangles (DIRECT) algorithm in one dimension. It can find the global minimum of a funciton without a-priori knowledge of the Lipschitz constant.}
+    \caption{The DIviding RECTangles (DIRECT) algorithm in one dimension. It can find the global minimum of a funciton without a-priori knowledge of the Lipschitz constant. The value of the line with slpoe $\pm K$ at each of the end-points represents the theoretical minimum for the value of the function in that region. Thus, the size of the region and the value of the function at the center help the algorithm determine potentially optimal sub-regions.}
     \label{fig:direct-1D}
 \end{figure}
 
