Aims started. JTML label added. Latex formatting applied.

--- a/src/2-aims/2-aims.tex
+++ b/src/2-aims/2-aims.tex
@@ -1,14 +1,14 @@
 \chapter{The Aims of this Dissertation}
 \label{sec:aims}
 
-\section{Aim 1: XXX}
+\section{Aim 1: Validating an Autonomous Pipeline for Measuring Total Knee Arthroplasty Kinematics from Single Plane Fluoroscopic Images}
 \label{sec:aim1}
 \input{src/2-aims/aim1.tex}
 
-\section{Aim 2: YYY}
+\section{Aim 2: Overcoming Inherent Single Plane Limitations When Measuring Total Knee Arthroplasty Kinematics}
 \label{sec:aim2}
 \input{src/2-aims/aim2.tex}
 
-\section{Aim 3: ZZZ}
+\section{Aim 3: Clinical Application of Pipeline on XYZ Patients}
 \label{sec:aim3}
 \input{src/2-aims/aim3.tex}
